# glow

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  example-shell-file.html  pyproject.toml  shader_compiler.cpp  shader_compiler.hpp
.github/workflows/: python-ubuntu20-04.yml  python-ubuntu20.yml  python-ubuntu22.yml  python-windows.yml
cmake/: GLFW.cmake  ImGui.cmake  ImPlot.cmake  pybind11.cmake
demo/: main.cpp
gles2/: CMakeLists.txt
gles2/include/glad/: glad.h
gles2/src/: glad.c
gles3/: CMakeLists.txt
gles3/include/glad/: glad.h
gles3/src/: glad.c
include/glow/: fonts.hpp  framebuffer.hpp  main.hpp  screen_quad.hpp  shader_compiler.hpp
include/uikit/: framebuffer.hpp  imgui_fonts.hpp  main.hpp  screen_quad.hpp  shader_compiler.hpp  viewport.hpp
python/: CMakeLists.txt  gl.cpp  gl.hpp  glfw.cpp  glfw.hpp  imgui.cpp  imgui.hpp  implot.cpp  implot.hpp  pfd.cpp  pfd.hpp  python.cpp
python/demo/: main.py
src/: fonts.cpp  framebuffer.cpp  imgui_fonts.cpp  main.cpp  main_emscripten.cpp  platform_base.cpp  platform_base.h  screen_quad.cpp  shader_compiler.cpp  viewport.cpp
