[build-system]
requires = [
  'scikit-build-core>=0.3.3',
]
build-backend = 'scikit_build_core.build'

[project]
name = 'uikitpy'
version = '0.2.2'
description = 'A set of libraries for UI development.'
readme = 'README.md'
authors = [
  { name = 'Taylor Holberton', email = 'taylorcholberton@gmail.com' }
]
requires_python = '>=3.7'
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: Apache Software License',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]

[tool.scikit-build]
cmake.args = ['--preset', 'pyproject']

[project.urls]
Homepage = 'https://github.com/tay10r/uikit'
Issues = 'https://github.com/tay10r/uikit/issues'
